# physics_sim

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: DemoModes.h  Demos.h  Display.cpp  Display.h  Force.cpp  Force.h  demos.cpp  main.cpp  time.h  vector.cpp  vector.h
src/calculators/: AccelerationCalculator.cpp  AccelerationCalculator.h  CalculatorManager.cpp  CalculatorManager.h  CoulombsLawCalculator.cpp  CoulombsLawCalculator.h  DotCalculator.cpp  DotCalculator.h  GravityCalculator.cpp  GravityCalculator.h  KeyPressManager.cpp  MotionCalculator.cpp  MotionCalculator.h  NewtonianCalculator.cpp  NewtonianCalculator.h  ParticleCollisionsCalculator.cpp  ParticleCollisionsCalculator.h  PressureCalculator.cpp  PressureCalculator.h  ReferenceFrameCalculator.h  ReferenceFramecalculator.cpp  RocketCalculator.cpp  RocketCalculator.h  RocketDataCalculator.h  RotationCalculator.cpp  RotationCalculator.h  SigFigsCalculator.h  WallCalculator.cpp  WallCalculator.h  (+5 more)
test/: AccelerationCalculator.Tests.cpp  CMakeLists.txt  CoulombsLawCalculator.Tests.cpp  DotCalculator.Tests.cpp  GravityCalculator.Tests.cpp  LinearParticle.Tests.cpp  MotionCalculator.Tests.cpp  NewtonianCalculator.Tests.cpp  Particle.Tests.cpp  ParticleCollisionsCalculator.Tests.cpp  PressureCalculator.Tests.cpp  ReferenceFrameCalculator.Tests.cpp  Rocket.Tests.cpp  RocketCalcultor.Tests.cpp  RotationCalculator.Tests.cpp  RotationalParticle.Tests.cpp  SigFigsCalculator.Tests.cpp  WallCollisionsCalculator.Tests.cpp  ZoomCalculator.Tests.cpp  vector.Tests.cpp  wall.Tests.cpp  wallCalculator.Tests.cpp
(+14 files in other folders)
